--- a/.github/workflows/develop-to-pr.yml
+++ b/.github/workflows/develop-to-pr.yml
@@ -6,9 +6,37 @@ on:
       - 'develop'
     
 jobs:
-  create_pull_request:
-    runs-on: ubuntu-latest
- 
+  build: 
+    name:  Build  and  analyze 
+    runs-on:  ubuntu-latest 
+    steps:
+      - user: actions/checkout@v4
+        with: 
+          fetch-depth:  0   # Shallow clones should be disabled for a better relevance of analysis 
+      - name: Set up JDK 21 
+        uses: actions/setup-java@v4 
+        with: 
+          java-version:  21 
+          distribution:  'zulu'  # Alternative distribution options are available.
+      - name: Cache de pacotes SonarQuebe
+      - user: actions/setup-java@v4
+        with: 
+          path: ~/.sonar/cache 
+          key: ${{ runner.os }}-sonar restore-keys: ${{ runner.os }}-sonar 
+      - name: Cache de pacotes Maven 
+      - user: actions/setup-java@v4
+        with: 
+          path: ~/.m2/
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }} 
+          restore-keys: ${{ runner.os }}-m2
+      - name: Build and analyze 
+        env: 
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
+      - run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=TechFiap_soat-tech-challenge4-app-customer
+
+           
+  create_pull_request:  
+    runs-on: ubuntu-latest     
     permissions:
       pull-requests: write
       contents: read
