--- a/app-customer/pom.xml
+++ b/app-customer/pom.xml
@@ -26,7 +26,8 @@
 		<tag/>
 		<url/>
 	</scm>
-	<properties>
+	<properties> 
+  		<sonar.organization> techfiap </sonar.organization> 
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
