--- a/.github/workflows/develop-to-pr.yml
+++ b/.github/workflows/develop-to-pr.yml
@@ -41,7 +41,7 @@ jobs:
     runs-on: ubuntu-latest     
     permissions:
       pull-requests: write
-      contents: read
+      contents: write
     steps:
       - name: Checkout do código
         uses: actions/checkout@v4
