--- a/.github/workflows/develop-to-pr.yml
+++ b/.github/workflows/develop-to-pr.yml
@@ -38,7 +38,8 @@ jobs:
 
            
   create_pull_request:  
-    runs-on: ubuntu-latest     
+    runs-on: ubuntu-latest
+    needs: build     
     permissions:
       pull-requests: write
       contents: write
@@ -53,7 +54,7 @@ jobs:
           destination_branch: "main"
           pr_title: "PR aberto automaticamente: ${{ github.ref_name }} -> to main"
           pr_body: |
-            Build da aplicação Java e da imagem Docker concluídos com sucesso.
+            Build da aplicação Java concluído com sucesso.
             O PR está pronto para revisão.
-          pr_label: "automação,docker"
+          pr_label: "automação"
           github_token: ${{ secrets.GITHUB_TOKEN }}
