--- a/.github/workflows/develop-to-pr.yml
+++ b/.github/workflows/develop-to-pr.yml
@@ -30,6 +30,8 @@ jobs:
           path: ~/.m2/
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }} 
           restore-keys: ${{ runner.os }}-m2
+      - name: Listar arquivos para debug
+        run: ls -R
       - name: Build and analyze 
         env: 
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
