--- a/.github/workflows/develop-to-pr.yml
+++ b/.github/workflows/develop-to-pr.yml
@@ -30,13 +30,12 @@ jobs:
           path: ~/.m2/
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }} 
           restore-keys: ${{ runner.os }}-m2
-      - name: Listar arquivos para debug
-        run: ls -R
+
       - name: Build and analyze 
         env: 
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
 
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=TechFiap_soat-tech-challenge4-app-customer
+        run: mvn -f app-customer/pom.xml -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=TechFiap_soat-tech-challenge4-app-customer
 
            
   create_pull_request:  
