--- a/.github/workflows/develop-to-pr.yml
+++ b/.github/workflows/develop-to-pr.yml
@@ -30,7 +30,10 @@ jobs:
           path: ~/.m2/
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }} 
           restore-keys: ${{ runner.os }}-m2
-
+      - name: Corrigir encoding de arquivos properties
+        run: |
+          find app-customer/src/main/resources -name "*.properties" -type f -exec sh -c 'iconv -f ISO-8859-1 -t UTF-8 "$1" > "$1.tmp" && mv "$1.tmp" "$1"' _ {} \; || true
+  
       - name: Build and analyze 
         env: 
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
