fix: step sonar

--- a/.github/workflows/develop-to-pr.yml
+++ b/.github/workflows/develop-to-pr.yml
@@ -6,8 +6,8 @@ on:
       - 'develop'
     
 jobs:
-  build: 
-    name:  Build  and  analyze 
+  sonar_analyse: 
+    name:  Build  and  analyze Sonarqube /develop
     runs-on:  ubuntu-latest 
     steps:
       - uses: actions/checkout@v4
@@ -34,7 +34,7 @@ jobs:
         run: |
           find app-customer/src/main/resources -name "*.properties" -type f -exec sh -c 'iconv -f ISO-8859-1 -t UTF-8 "$1" > "$1.tmp" && mv "$1.tmp" "$1"' _ {} \; || true
   
-      - name: Build and analyze 
+      - name: Build and analyze Sonar
         env: 
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
 
@@ -43,7 +43,7 @@ jobs:
            
   create_pull_request:  
     runs-on: ubuntu-latest
-    needs: build     
+    needs: sonar_analyse     
     permissions:
       pull-requests: write
       contents: write
