--- a/app-customer/src/main/resources/application-test.properties
+++ b/app-customer/src/main/resources/application-test.properties
@@ -1,4 +1,4 @@
-# Datasource (H2 em memória)
+# Datasource (H2 em memoria)
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
