--- a/infra/external-secret.yml
+++ b/infra/external-secret.yml
@@ -2,7 +2,7 @@ apiVersion: external-secrets.io/v1
 kind: SecretStore
 metadata:
   name: aws-secret-store
-  namespace: fastfood-app
+  namespace: fastfood-customer
 spec:
   provider:
     aws:
@@ -11,20 +11,20 @@ spec:
       auth:
         jwt:
           serviceAccountRef:
-            name: fastfood-api-sa
+            name: fastfood-customer-sa
 ---
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: fastfood-api-rds-secret
-  namespace: fastfood-app
+  namespace: fastfood-customer
 spec:
   refreshInterval: "1h"
   secretStoreRef:
     name: aws-secret-store
     kind: SecretStore
   target:
-    name: fastfood-api-secrets # Este é o nome do Secret que será criado no Kubernetes
+    name: fastfood-customer-secrets # Este é o nome do Secret que será criado no Kubernetes
     template:
       data:
         DATASOURCE_USERNAME: "{{ .username }}"
