--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -61,7 +61,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           # role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME_ARN }}
-          role-to-assume: arn:aws:iam::239409137076:role/role-eks-apply
+          role-to-assume: arn:aws:iam::239409137076:role/role-eks-fiap
           aws-region: ${{ secrets.AWS_REGION }}
 
 
@@ -113,7 +113,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           #role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME_ARN }}
-          role-to-assume: arn:aws:iam::239409137076:role/role-eks-apply
+          role-to-assume: arn:aws:iam::239409137076:role/role-eks-fiap
           aws-region: ${{ secrets.AWS_REGION }}
           audience: sts.amazonaws.com
 
