--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -83,7 +83,7 @@ jobs:
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: arn:aws:iam::239409137076:role/role-eks-fiap
+          ECR_REPOSITORY: "239409137076.dkr.ecr.us-east-1.amazonaws.com/customer"
           # ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
