--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -60,8 +60,8 @@ jobs:
       - name: Configurar credenciais da AWS
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          # role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME_ARN }}
-          role-to-assume: arn:aws:iam::239409137076:role/role-eks-fiap
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME_ARN }}
+          #role-to-assume: arn:aws:iam::239409137076:role/role-eks-fiap
           aws-region: ${{ secrets.AWS_REGION }}
 
 
@@ -83,8 +83,8 @@ jobs:
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: "customer"
-          # ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+          #ECR_REPOSITORY: "customer"
+          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
           set -x
@@ -142,7 +142,7 @@ jobs:
           NEW_TAG: ${{ needs.build.outputs.tag }}
         run: |
          
-          sed -i "s/TAG/$NEW_TAG/g" infra/app/deployment.yml
+          sed -i "s/TAG/$NEW_TAG/g" infra/deployment.yml
 
       - name: Verificar valor da variavel imagem 
         run: |
