--- a/.github/workflows/main-deploy.yml
+++ b/.github/workflows/main-deploy.yml
@@ -60,8 +60,8 @@ jobs:
       - name: Configurar credenciais da AWS
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME_ARN }}
-          #role-to-assume: arn:aws:iam::239409137076:role/role-eks-fiap
+          #role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME_ARN }}
+          role-to-assume: arn:aws:iam::239409137076:role/role-eks-fiap
           aws-region: ${{ secrets.AWS_REGION }}
 
 
