--- a/infra/ingress.yaml
+++ b/infra/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: fastfood-customer-ingress
-  namespace: ffastfood-customer
+  namespace: fastfood-customer
 spec:
   ingressClassName: nginx
   rules:
