--- a/infra/external-secret.yml
+++ b/infra/external-secret.yml
@@ -11,12 +11,12 @@ spec:
       auth:
         jwt:
           serviceAccountRef:
-            name: fastfood-customer-sa
+            name: fastfood-api-sa
 ---
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: fastfood-api-rds-secret
+  name: fastfood-customer-secret
   namespace: fastfood-customer
 spec:
   refreshInterval: "1h"
@@ -31,4 +31,4 @@ spec:
         DATASOURCE_PASSWORD: "{{ .password }}"
   dataFrom:
   - extract:
-      key: arn:aws:secretsmanager:us-east-1:239409137076:secret:rds!db-8e4f60db-f835-4c87-a1cd-2fe50c8ab3cb
+      key: arn:aws:secretsmanager:us-east-1:239409137076:secret:rds!db-fe0086ab-97dd-469b-ae28-ff533b370552
