--- a/infra/deployment.yml
+++ b/infra/deployment.yml
@@ -17,7 +17,7 @@ spec:
       containers:
         - name: fastfood-customer
           #image: 239409137076.dkr.ecr.us-east-1.amazonaws.com/customer:TAG
-          image: 239409137076.dkr.ecr.us-east-1.amazonaws.com/customer:039c29ed14e5ac746a08bd1aaa5f6e784c87f81a
+          image: 239409137076.dkr.ecr.us-east-1.amazonaws.com/customer:TAG
           #image: hmouraf/fastfood:tech_fase2
           #image: hmouraf/soat-tech-challenge-fast-food-app:feature-build
           ports:
