--- a/infra/external-secret.yml
+++ b/infra/external-secret.yml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1
 kind: SecretStore
 metadata:
-  name: aws-secret-store
+  name: aws-secrets-manager
   namespace: fastfood-customer
 spec:
   provider:
@@ -11,24 +11,27 @@ spec:
       auth:
         jwt:
           serviceAccountRef:
-            name: fastfood-api-sa
+            name: fastfood-customer-sa
 ---
+
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: fastfood-customer-secret
+  name: fastfood-customer-rds-secret
   namespace: fastfood-customer
 spec:
-  refreshInterval: "1h"
+  refreshInterval: "10s"
   secretStoreRef:
-    name: aws-secret-store
+    name: aws-secrets-manager
     kind: SecretStore
   target:
-    name: fastfood-customer-secrets # Este é o nome do Secret que será criado no Kubernetes
+    name: fastfood-customer-secrets
+    creationPolicy: Owner
     template:
+      engineVersion: v2
       data:
         DATASOURCE_USERNAME: "{{ .username }}"
         DATASOURCE_PASSWORD: "{{ .password }}"
   dataFrom:
   - extract:
-      key: arn:aws:secretsmanager:us-east-1:239409137076:secret:rds!db-fe0086ab-97dd-469b-ae28-ff533b370552
+      key: rds!db-fe0086ab-97dd-469b-ae28-ff533b370552
