--- a/.github/workflows/feature-pr-develop.yml
+++ b/.github/workflows/feature-pr-develop.yml
@@ -32,13 +32,18 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Corrigir encoding de arquivos properties
         run: |
-          find app-customer/src/main/resources -name "*.properties" -type f -exec sh -c 'iconv -f ISO-8859-1 -t UTF-8 "$1" > "$1.tmp" && mv "$1.tmp" "$1"' _ {} \; || true
+          find . -path "*/src/main/resources/*.properties" -type f -exec sh -c 'iconv -f ISO-8859-1 -t UTF-8 "$1" > "$1.tmp" && mv "$1.tmp" "$1"' _ {} \; || true
+ 
   
       - name: Build and analyze Sonar
         env: 
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} 
 
-        run: mvn -f app-customer/pom.xml -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=TechFiap_soat-tech-challenge4-app-customer
+        run: |
+          POM_FILE=$(find . -name "pom.xml" -not -path "*/target/*" -maxdepth 2 | head -n 1)
+          if [ -z "$POM_FILE" ]; then echo "pom.xml not found"; exit 1; fi
+          mvn -f "$POM_FILE" -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=TechFiap_soat-tech-challenge4-app-customer
+
 
   create_pull_request:
     runs-on: ubuntu-latest
