--- a/infra/external-secret.yml
+++ b/infra/external-secret.yml
@@ -2,7 +2,7 @@ apiVersion: external-secrets.io/v1
 kind: SecretStore
 metadata:
   name: aws-secrets-manager
-  namespace: fastfood-customer
+  namespace: customer
 spec:
   provider:
     aws:
@@ -11,21 +11,21 @@ spec:
       auth:
         jwt:
           serviceAccountRef:
-            name: fastfood-customer-sa
+            name: customer-sa
 ---
 
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: fastfood-customer-rds-secret
-  namespace: fastfood-customer
+  name: customer-rds-secret
+  namespace: customer
 spec:
   refreshInterval: "10s"
   secretStoreRef:
     name: aws-secrets-manager
     kind: SecretStore
   target:
-    name: fastfood-customer-secrets
+    name: customer-secrets
     creationPolicy: Owner
     template:
       engineVersion: v2
@@ -34,4 +34,4 @@ spec:
         DATASOURCE_PASSWORD: "{{ .password }}"
   dataFrom:
   - extract:
-      key: rds!db-fe0086ab-97dd-469b-ae28-ff533b370552
+      key: rds!db-783fe5a0-1c15-4408-a841-fd7e76600f86
