--- a/infra/configmap.yml
+++ b/infra/configmap.yml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: fastfood-customer-configmap
-  namespace: fastfood-customer
+  name: customer-configmap
+  namespace: customer
 data:
   SPRING_DATASOURCE_URL: jdbc:postgresql://soat-postgres-db.cszqygoyua1z.us-east-1.rds.amazonaws.com:5432/fastdb
   SPRING_JPA_HIBERNATE_DDL_AUTO: update
