--- a/infra/hpa.yml
+++ b/infra/hpa.yml
@@ -1,13 +1,13 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: fastfood-customer-hpa
-  namespace: fastfood-customer
+  name: customer-hpa
+  namespace: customer
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: fastfood-customer
+    name: customer-deployment
 
   minReplicas: 1
   maxReplicas: 5
