--- a/infra/ingress.yaml
+++ b/infra/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: fastfood-customer-ingress
-  namespace: fastfood-customer
+  namespace: customer
 spec:
   ingressClassName: nginx
   rules:
@@ -12,6 +12,6 @@ spec:
         pathType: Prefix
         backend:  
           service:
-            name: fastfood-customer-service
+            name: customer-service
             port:
               number: 8080
