--- a/infra/serviceaccount.yml
+++ b/infra/serviceaccount.yml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: fastfood-customer-sa
-  namespace: fastfood-customer
+  name: customer-sa
+  namespace: customer
   annotations:
     # IMPORTANTE: Substitua pelo ARN da IAM Role que você criou na AWS.
     eks.amazonaws.com/role-arn: "arn:aws:iam::239409137076:role/iam-application-role"
