--- a/infra/external-secret.yml
+++ b/infra/external-secret.yml
@@ -2,7 +2,7 @@ apiVersion: external-secrets.io/v1
 kind: SecretStore
 metadata:
   name: aws-secrets-manager
-  namespace: customer
+  namespace: customer-app
 spec:
   provider:
     aws:
@@ -18,7 +18,7 @@ apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: customer-rds-secret
-  namespace: customer
+  namespace: customer-app
 spec:
   refreshInterval: "10s"
   secretStoreRef:
