--- a/infra/serviceaccount.yml
+++ b/infra/serviceaccount.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: customer-sa
-  namespace: customer
+  namespace: customer-app
   annotations:
     # IMPORTANTE: Substitua pelo ARN da IAM Role que você criou na AWS.
     eks.amazonaws.com/role-arn: "arn:aws:iam::239409137076:role/iam-application-role"
