--- a/infra/configmap.yml
+++ b/infra/configmap.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: customer-configmap
-  namespace: customer
+  namespace: customer-app
 data:
   SPRING_DATASOURCE_URL: jdbc:postgresql://soat-postgres-db.cszqygoyua1z.us-east-1.rds.amazonaws.com:5432/fastdb
   SPRING_JPA_HIBERNATE_DDL_AUTO: update
