--- a/infra/deployment.yml
+++ b/infra/deployment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: customer-deployment
-  namespace: customer
+  namespace: customer-app
 spec:
   replicas: 1
   selector:
