--- a/infra/hpa.yml
+++ b/infra/hpa.yml
@@ -2,7 +2,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: customer-hpa
-  namespace: customer
+  namespace: customer-app
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
