--- a/infra/ingress.yaml
+++ b/infra/ingress.yaml
@@ -1,8 +1,8 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: fastfood-customer-ingress
-  namespace: customer
+  name: customer-ingress
+  namespace: customer-app
 spec:
   ingressClassName: nginx
   rules:
