--- a/infra/service.yml
+++ b/infra/service.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: customer-service
-  namespace: customer
+  namespace: customer-app
 spec:
   selector:
     app: customer
