--- a/infra/ingress.yaml
+++ b/infra/ingress.yaml
@@ -3,13 +3,15 @@ kind: Ingress
 metadata:
   name: customer-ingress
   namespace: customer-app
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
   rules:
   - http:
       paths:
-      - path: /
-        pathType: Prefix
+      - path: /customer(/|$)(.*)
+        pathType: ImplementationSpecific
         backend:  
           service:
             name: customer-service
